--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,4 +11,6 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
     "uvicorn>=0.37.0",
+    "pytest>=8.0.0",
+    "httpx>=0.27.0",
 ]
