First login set up

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,37 +1,34 @@
 # AI Provider Configuration
-# Options: "bedrock" (default for production) or "openai" (for local development)
+# Choose 'bedrock' for AWS Bedrock or 'openai' for OpenAI
 AI_PROVIDER=bedrock
 
-# AWS Bedrock Configuration (used when AI_PROVIDER=bedrock)
-BEDROCK_MODEL_ID=eu.amazon.nova-lite-v1:0
-DEFAULT_AWS_REGION=eu-west-1
+# AWS Bedrock Configuration (if using bedrock)
+BEDROCK_MODEL_ID=us.anthropic.claude-3-5-sonnet-20241022-v2:0
+AWS_REGION=us-east-1
+# AWS credentials will be loaded from environment or IAM role
 
-# OpenAI Configuration (used when AI_PROVIDER=openai)
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your-openai-api-key-here
-OPENAI_MODEL=gpt-4o-mini
+# OpenAI Configuration (if using openai)
+# OPENAI_API_KEY=sk-your-openai-api-key-here
+# OPENAI_MODEL=gpt-4
+
+# Storage Configuration
+# Set to 'true' to use S3, 'false' for local storage
+USE_S3=false
+# If using S3, specify bucket name
+# S3_BUCKET=your-bucket-name
+
+# Rate Limiting Configuration
+RATE_LIMIT_MAX_REQUESTS=10
+RATE_LIMIT_WINDOW_SECONDS=60
+RATE_LIMIT_COOLDOWN_SECONDS=2.0
 
 # CORS Configuration
-# Comma-separated list of allowed origins for CORS
 CORS_ORIGINS=http://localhost:3000
 
-# Memory Storage Configuration
-# Set to "true" to use S3 for conversation memory (production)
-# Set to "false" to use local file storage (local development)
-USE_S3=false
-S3_BUCKET=
-MEMORY_DIR=../memory
-
-# Personal Data Storage (for Lambda deployment)
-# S3 bucket name where personal data files are stored
-PERSONAL_DATA_BUCKET=
-
-# Data Encryption (optional - for encrypted data files)
-# Encryption key for decrypting personal data files
-DATA_KEY=
-
-# GitHub Configuration (optional - for downloading encrypted data from releases)
-# Private repository name (format: owner/repo-name)
-PRIVATE_REPO_NAME=
-# GitHub personal access token (required for private repos)
-GITHUB_TOKEN=
+# Clerk Authentication (optional - for JWT validation)
+# Get these values from your Clerk Dashboard → API Keys → Frontend API
+# Example: if Frontend API is https://grateful-mink-12.clerk.accounts.dev
+# CLERK_JWKS_URL=https://grateful-mink-12.clerk.accounts.dev/.well-known/jwks.json
+# CLERK_ISSUER=https://grateful-mink-12.clerk.accounts.dev
+CLERK_JWKS_URL=
+CLERK_ISSUER=
