--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,4 +13,7 @@ dependencies = [
     "uvicorn>=0.37.0",
     "pytest>=8.0.0",
     "httpx>=0.27.0",
+    "pyjwt>=2.8.0",
+    "cryptography>=41.0.0",
+    "requests>=2.32.0",
 ]
