--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.34.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
