--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "mangum>=0.19.0",
     "openai>=2.1.0",
     "pypdf>=6.1.1",
+    "pyyaml>=6.0.0",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
     "uvicorn>=0.37.0",
