--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,12 @@
 name: Deploy Digital Twin
 
 on:
-  # Disabled during development - uncomment to re-enable automatic deployment on push
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches: [main]
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment to deploy to'
+        description: 'Environment to deploy'
         required: true
         default: 'dev'
         type: choice
@@ -17,21 +15,16 @@ on:
           - test
           - prod
 
-env:
-  AWS_REGION: eu-west-1
-  PROJECT_NAME: digital-twin
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   deploy:
     name: Deploy to ${{ github.event.inputs.environment || 'dev' }}
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}
-
+    environment: ${{ github.event.inputs.environment || 'dev' }}
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -40,7 +33,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
+          role-session-name: github-actions-deploy
+          aws-region: ${{ secrets.DEFAULT_AWS_REGION }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -48,117 +42,58 @@ jobs:
           python-version: '3.12'
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          version: "latest"
-
-      - name: Build Lambda package
-        working-directory: ${{ github.workspace }}/backend
         run: |
-          uv sync
-          uv run deploy.py
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.0
+          terraform_wrapper: false  # Important: disable wrapper to get raw outputs
 
-      - name: Terraform Init
-        working-directory: ${{ github.workspace }}/terraform
-        env:
-          ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
-        run: |
-          AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          terraform init -input=false \
-            -backend-config="bucket=digital-twin-terraform-state-${AWS_ACCOUNT_ID}" \
-            -backend-config="key=${ENVIRONMENT}/terraform.tfstate" \
-            -backend-config="region=${AWS_REGION}" \
-            -backend-config="dynamodb_table=digital-twin-terraform-locks" \
-            -backend-config="encrypt=true"
-
-      - name: Terraform Workspace
-        working-directory: ${{ github.workspace }}/terraform
-        env:
-          ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
-        run: |
-          if ! terraform workspace list | grep -q "$ENVIRONMENT"; then
-            terraform workspace new "$ENVIRONMENT"
-          else
-            terraform workspace select "$ENVIRONMENT"
-          fi
-
-      - name: Terraform Plan
-        working-directory: ${{ github.workspace }}/terraform
-        env:
-          ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
-        run: |
-          if [ "$ENVIRONMENT" = "prod" ]; then
-            terraform plan -var-file=prod.tfvars -var="project_name=${{ env.PROJECT_NAME }}" -var="environment=${ENVIRONMENT}"
-          else
-            terraform plan -var="project_name=${{ env.PROJECT_NAME }}" -var="environment=${ENVIRONMENT}"
-          fi
-
-      - name: Terraform Apply
-        working-directory: ${{ github.workspace }}/terraform
-        env:
-          ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
-        run: |
-          if [ "$ENVIRONMENT" = "prod" ]; then
-            terraform apply -var-file=prod.tfvars -var="project_name=${{ env.PROJECT_NAME }}" -var="environment=${ENVIRONMENT}" -auto-approve
-          else
-            terraform apply -var="project_name=${{ env.PROJECT_NAME }}" -var="environment=${ENVIRONMENT}" -auto-approve
-          fi
-
-      - name: Get API Gateway URL
-        id: get-api-url
-        working-directory: ${{ github.workspace }}/terraform
-        run: |
-          API_URL=$(terraform output -raw api_gateway_url)
-          echo "api_url=$API_URL" >> $GITHUB_OUTPUT
-
-      - name: Get Frontend Bucket
-        id: get-frontend-bucket
-        working-directory: ${{ github.workspace }}/terraform
-        run: |
-          FRONTEND_BUCKET=$(terraform output -raw s3_frontend_bucket)
-          echo "frontend_bucket=$FRONTEND_BUCKET" >> $GITHUB_OUTPUT
-
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Install frontend dependencies
-        working-directory: ${{ github.workspace }}/frontend
-        run: npm ci
-
-      - name: Build frontend
-        working-directory: ${{ github.workspace }}/frontend
+      - name: Run Deployment Script
+        run: |
+          # Set environment variables for the script
+          export AWS_ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
+          export DEFAULT_AWS_REGION=${{ secrets.DEFAULT_AWS_REGION }}
+          
+          # Make script executable and run it
+          chmod +x scripts/deploy.sh
+          ./scripts/deploy.sh ${{ github.event.inputs.environment || 'dev' }}
         env:
-          NEXT_PUBLIC_API_URL: ${{ steps.get-api-url.outputs.api_url }}
+          AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
+          
+      - name: Get Deployment URLs
+        id: deploy_outputs
+        working-directory: ./terraform
         run: |
-          echo "NEXT_PUBLIC_API_URL=${{ steps.get-api-url.outputs.api_url }}" > .env.production
-          npm run build
+          terraform workspace select ${{ github.event.inputs.environment || 'dev' }}
+          echo "cloudfront_url=$(terraform output -raw cloudfront_url)" >> $GITHUB_OUTPUT
+          echo "api_url=$(terraform output -raw api_gateway_url)" >> $GITHUB_OUTPUT
+          echo "frontend_bucket=$(terraform output -raw s3_frontend_bucket)" >> $GITHUB_OUTPUT
 
-      - name: Deploy frontend to S3
-        working-directory: ${{ github.workspace }}/frontend
+      - name: Invalidate CloudFront
         run: |
-          aws s3 sync ./out "s3://${{ steps.get-frontend-bucket.outputs.frontend_bucket }}/" --delete
-
-      - name: Get CloudFront URL
-        id: get-cloudfront-url
-        working-directory: ${{ github.workspace }}/terraform
-        run: |
-          CLOUDFRONT_URL=$(terraform output -raw cloudfront_url)
-          echo "cloudfront_url=$CLOUDFRONT_URL" >> $GITHUB_OUTPUT
+          DISTRIBUTION_ID=$(aws cloudfront list-distributions \
+            --query "DistributionList.Items[?Origins.Items[?DomainName=='${{ steps.deploy_outputs.outputs.frontend_bucket }}.s3-website-${{ secrets.DEFAULT_AWS_REGION }}.amazonaws.com']].Id | [0]" \
+            --output text)
+          
+          if [ "$DISTRIBUTION_ID" != "None" ] && [ -n "$DISTRIBUTION_ID" ]; then
+            aws cloudfront create-invalidation \
+              --distribution-id $DISTRIBUTION_ID \
+              --paths "/*"
+          fi
 
       - name: Deployment Summary
         run: |
-          echo "## 🚀 Deployment Complete!" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Environment:** ${{ github.event.inputs.environment || 'dev' }}" >> $GITHUB_STEP_SUMMARY
-          echo "**CloudFront URL:** ${{ steps.get-cloudfront-url.outputs.cloudfront_url }}" >> $GITHUB_STEP_SUMMARY
-          echo "**API Gateway URL:** ${{ steps.get-api-url.outputs.api_url }}" >> $GITHUB_STEP_SUMMARY
-
+          echo "✅ Deployment Complete!"
+          echo "🌐 CloudFront URL: ${{ steps.deploy_outputs.outputs.cloudfront_url }}"
+          echo "📡 API Gateway: ${{ steps.deploy_outputs.outputs.api_url }}"
+          echo "🪣 Frontend Bucket: ${{ steps.deploy_outputs.outputs.frontend_bucket }}"
