--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,34 +1,24 @@
-# AI Provider Configuration
-# Choose 'bedrock' for AWS Bedrock or 'openai' for OpenAI
-AI_PROVIDER=bedrock
-
-# AWS Bedrock Configuration (if using bedrock)
-BEDROCK_MODEL_ID=us.anthropic.claude-3-5-sonnet-20241022-v2:0
-AWS_REGION=us-east-1
-# AWS credentials will be loaded from environment or IAM role
-
-# OpenAI Configuration (if using openai)
-# OPENAI_API_KEY=sk-your-openai-api-key-here
-# OPENAI_MODEL=gpt-4
-
-# Storage Configuration
-# Set to 'true' to use S3, 'false' for local storage
-USE_S3=false
-# If using S3, specify bucket name
-# S3_BUCKET=your-bucket-name
-
-# Rate Limiting Configuration
-RATE_LIMIT_MAX_REQUESTS=10
-RATE_LIMIT_WINDOW_SECONDS=60
-RATE_LIMIT_COOLDOWN_SECONDS=2.0
-
 # CORS Configuration
 CORS_ORIGINS=http://localhost:3000
 
-# Clerk Authentication (optional - for JWT validation)
-# Get these values from your Clerk Dashboard → API Keys → Frontend API
-# Example: if Frontend API is https://grateful-mink-12.clerk.accounts.dev
-# CLERK_JWKS_URL=https://grateful-mink-12.clerk.accounts.dev/.well-known/jwks.json
-# CLERK_ISSUER=https://grateful-mink-12.clerk.accounts.dev
-CLERK_JWKS_URL=
-CLERK_ISSUER=
+# AWS Configuration
+AWS_ACCOUNT_ID=<your-aws-access-key-id>
+DEFAULT_AWS_REGION=eu-central-1
+
+# AWS Bedrock Configuration
+BEDROCK_MODEL_ID=eu.amazon.nova-lite-v1:0
+
+# Project Configuration
+PROJECT_NAME=digital-twin
+
+# Data Encryption Key (for decrypting personal data)
+DATA_KEY=<your-base64-encoded-encryption-key>
+
+# OpenAI Configuration (for local development)
+OPENAI_API_KEY=sk-your-openai-api-key-here
+OPENAI_MODEL=gpt-4o-mini
+
+# Storage Configuration
+USE_S3=false
+S3_BUCKET=
+MEMORY_DIR=../memory
