--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
 name: Deploy Digital Twin
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
     inputs:
       environment:
@@ -19,6 +17,29 @@ on:
         required: false
         default: false
         type: boolean
+  workflow_call:
+    inputs:
+      environment:
+        description: 'Environment to deploy'
+        required: false
+        type: string
+        default: 'dev'
+      use_local_data:
+        description: 'Use local data instead of encrypted private repo'
+        required: false
+        type: boolean
+        default: false
+    secrets:
+      AWS_ROLE_ARN:
+        required: true
+      PRIVATE_DATA_PAT:
+        required: true
+      DEFAULT_AWS_REGION:
+        required: true
+      AWS_ACCOUNT_ID:
+        required: true
+      DATA_KEY:
+        required: true
 
 permissions:
   id-token: write
@@ -26,9 +47,12 @@ permissions:
 
 jobs:
   deploy:
-    name: Deploy to ${{ github.event.inputs.environment || 'dev' }}
+    name: Deploy to ${{ inputs.environment || github.event.inputs.environment || 'dev' }}
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.environment || 'dev' }}
+    env:
+      DEPLOY_ENV: ${{ inputs.environment || github.event.inputs.environment || 'dev' }}
+      USE_LOCAL_DATA: ${{ inputs.use_local_data || github.event.inputs.use_local_data || false }}
+    environment: ${{ inputs.environment || github.event.inputs.environment || 'dev' }}
 
     steps:
       - name: Checkout code
@@ -71,7 +95,7 @@ jobs:
 
           # Make script executable and run it
           chmod +x scripts/deploy.sh
-          ./scripts/deploy.sh ${{ github.event.inputs.environment || 'dev' }}
+          ./scripts/deploy.sh $DEPLOY_ENV
         env:
           AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
           GITHUB_TOKEN: ${{ secrets.PRIVATE_DATA_PAT }}
