--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,7 +3,9 @@ name: Testing
 on:
   pull_request:
   push:
-    branches: [main]
+    branches-ignore:
+      - main
+  workflow_call:
 
 permissions:
   contents: read
