Added support for prod and changed README

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,4 +21,6 @@ OPENAI_MODEL=gpt-4o-mini
 # Storage Configuration
 USE_S3=false
 S3_BUCKET=
-MEMORY_DIR=../memory
+HISTORY_DIR=../history
+
+AI_PROVIDER=ollama # ollama, openai (for local testing)
